welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var biscuit=0
do {avance()} while (croisement())
while (biscuit!>=3 && !croisement()) {avance; biscuit=biscuit+1;}
if (croisement() && biscuit=3) {